# structured-data-viewer

./: LICENSE  README.md  index.html  structured-data-viewer.html
structured-data-viewer-cpp/: .gitignore  CMakeLists.txt
structured-data-viewer-cpp/cmake/: FetchDependencies.cmake
structured-data-viewer-cpp/src/: app.cpp  app.h  main.cpp
structured-data-viewer-cpp/src/data/: data_node.cpp  data_node.h  format_detect.cpp  format_detect.h  html_parser.cpp  html_parser.h  json_parser.cpp  json_parser.h  xml_parser.cpp  xml_parser.h  yaml_parser.cpp  yaml_parser.h
structured-data-viewer-cpp/src/dialogs/: add_dialog.cpp  add_dialog.h  delete_dialog.cpp  delete_dialog.h  edit_dialog.cpp  edit_dialog.h
structured-data-viewer-cpp/src/dnd/: drag_drop.cpp  drag_drop.h
structured-data-viewer-cpp/src/history/: undo_redo.cpp  undo_redo.h
structured-data-viewer-cpp/src/stats/: statistics.cpp  statistics.h
structured-data-viewer-cpp/src/theme/: catppuccin.cpp  catppuccin.h
structured-data-viewer-cpp/src/util/: file_io.cpp  file_io.h  string_util.cpp  string_util.h
structured-data-viewer-cpp/src/views/: editor_panel.cpp  editor_panel.h  table_view.cpp  table_view.h  tree_view.cpp  tree_view.h
